Cambios en los logos

--- a/index.html
+++ b/index.html
@@ -436,19 +436,19 @@
                                                             <a href="https://www.facebook.com/dentalidcuu/"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
-                                                                <img src="./assets/facebook.png" loading="lazy"
+                                                                <img src="./assets/facebook-white.png" loading="lazy"
                                                                     alt="Facebook Icon" class="icon-1x1-small" />
                                                             </a>
                                                             <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
-                                                                <img src="./assets/instagram.png" loading="lazy"
+                                                                <img src="./assets/instagram-white.png" loading="lazy"
                                                                     alt="Instagram Icon" class="icon-1x1-small" />
                                                             </a>
                                                             <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
-                                                                <img src="./assets/linkedin.png" loading="lazy"
+                                                                <img src="./assets/linkedin-white.png" loading="lazy"
                                                                     alt="LinkedIn Icon" class="icon-1x1-small" />
                                                             </a>
                                                         </div>
@@ -488,19 +488,19 @@
                                                             <a href="https://www.facebook.com/dentalidcuu/"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
-                                                                <img src="./assets/facebook.png" loading="lazy"
+                                                                <img src="./assets/facebook-white.png" loading="lazy"
                                                                     alt="Facebook Icon" class="icon-1x1-small" />
                                                             </a>
                                                             <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
-                                                                <img src="./assets/instagram.png" loading="lazy"
+                                                                <img src="./assets/instagram-white.png" loading="lazy"
                                                                     alt="Instagram Icon" class="icon-1x1-small" />
                                                             </a>
                                                             <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
-                                                                <img src="./assets/linkedin.png" loading="lazy"
+                                                                <img src="./assets/linkedin-white.png" loading="lazy"
                                                                     alt="LinkedIn Icon" class="icon-1x1-small" />
                                                             </a>
                                                         </div>
@@ -589,19 +589,19 @@
                                                             <a href="https://www.facebook.com/dentalidcuu/"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
-                                                                <img src="./assets/facebook.png" loading="lazy"
+                                                                <img src="./assets/facebook-white.png" loading="lazy"
                                                                     alt="Facebook Icon" class="icon-1x1-small" />
                                                             </a>
                                                             <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
-                                                                <img src="./assets/instagram.png" loading="lazy"
+                                                                <img src="./assets/instagram-white.png" loading="lazy"
                                                                     alt="Instagram Icon" class="icon-1x1-small" />
                                                             </a>
                                                             <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
-                                                                <img src="./assets/linkedin.png" loading="lazy"
+                                                                <img src="./assets/linkedin-white.png" loading="lazy"
                                                                     alt="LinkedIn Icon" class="icon-1x1-small" />
                                                             </a>
                                                         </div>
@@ -687,19 +687,19 @@
                                                             <a href="https://www.facebook.com/dentalidcuu/"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
-                                                                <img src="./assets/facebook.png" loading="lazy"
+                                                                <img src="./assets/facebook-white.png" loading="lazy"
                                                                     alt="Facebook Icon" class="icon-1x1-small" />
                                                             </a>
                                                             <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
-                                                                <img src="./assets/instagram.png" loading="lazy"
+                                                                <img src="./assets/instagram-white.png" loading="lazy"
                                                                     alt="Instagram Icon" class="icon-1x1-small" />
                                                             </a>
                                                             <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
-                                                                <img src="./assets/linkedin.png" loading="lazy"
+                                                                <img src="./assets/linkedin-white.png" loading="lazy"
                                                                     alt="LinkedIn Icon" class="icon-1x1-small" />
                                                             </a>
                                                         </div>
@@ -739,19 +739,19 @@
                                                             <a href="https://www.facebook.com/dentalidcuu/"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
-                                                                <img src="./assets/facebook.png" loading="lazy"
+                                                                <img src="./assets/facebook-white.png" loading="lazy"
                                                                     alt="Facebook Icon" class="icon-1x1-small" />
                                                             </a>
                                                             <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
-                                                                <img src="./assets/instagram.png" loading="lazy"
+                                                                <img src="./assets/instagram-white.png" loading="lazy"
                                                                     alt="Instagram Icon" class="icon-1x1-small" />
                                                             </a>
                                                             <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
-                                                                <img src="./assets/linkedin.png" loading="lazy"
+                                                                <img src="./assets/linkedin-white.png" loading="lazy"
                                                                     alt="LinkedIn Icon" class="icon-1x1-small" />
                                                             </a>
                                                         </div>
@@ -795,19 +795,19 @@
                                                             <a href="https://www.facebook.com/dentalidcuu/"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
-                                                                <img src="./assets/facebook.png" loading="lazy"
+                                                                <img src="./assets/facebook-white.png" loading="lazy"
                                                                     alt="Facebook Icon" class="icon-1x1-small" />
                                                             </a>
                                                             <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
-                                                                <img src="./assets/instagram.png" loading="lazy"
+                                                                <img src="./assets/instagram-white.png" loading="lazy"
                                                                     alt="Instagram Icon" class="icon-1x1-small" />
                                                             </a>
                                                             <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la"
                                                                 class="footer-social-link w-inline-block"
                                                                 target="_blank">
-                                                                <img src="./assets/linkedin.png" loading="lazy"
+                                                                <img src="./assets/linkedin-white.png" loading="lazy"
                                                                     alt="LinkedIn Icon" class="icon-1x1-small" />
                                                             </a>
                                                         </div>
@@ -1557,7 +1557,7 @@
                         <div class="padding-bottom padding-xlarge">
                             <div class="footer-top-wrapper">
                                 <div class="logo-footer">
-                                    <a href="/" aria-current="page" class="navbar-logo-link w-nav-brand w--current">
+                                    <a href="" aria-current="page" class="navbar-logo-link w-nav-brand w--current">
                                         <img src="./assets/.png" loading="lazy" alt="Logo" class="navbar-logo" />
                                     </a>
                                 </div>
@@ -1570,7 +1570,7 @@
                                         <a href="#faq" class="navbar-link w-nav-link">FAQs</a>
 
                                     </nav>
-                                </div>
+                                <!-- </div>
                                 <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
                                     class="w-layout-grid footer-social-list">
                                     <a href="https://www.facebook.com/dentalidcuu/"
@@ -1582,7 +1582,7 @@
                                         class="footer-social-link w-inline-block" target="_blank">
                                         <img src="./assets/instagram.png" loading="lazy" alt="Instagram Icon"
                                             class="icon-1x1-small" />
-                                    </a>
+                                    </a> -->
                                 </div>
                             </div>
                         </div>
@@ -1603,7 +1603,7 @@
                             <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8ca2-547d8c7d" class="footer-credit">Todos
                                 los derechos reservados</div>
                             <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8ca4-547d8c7d" class="text-size-small">
-                                Diseñado por: <a href="#"><img src="./assets/Transparent Logo.png" alt="Logo Vexa"
+                                Diseñado por: <a href=""><img src="./assets/Transparent Logo.png" alt="Logo Vexa"
                                         class="vexa-logo"></a>
                             </div>
 
