--- a/index.html
+++ b/index.html
@@ -824,6 +824,23 @@
                         </div>
                     </div>
                 </div>
+                <style>
+                    /* redes conferencistas */
+                    .redes-c {
+                        height: fit-content;
+                        padding: 1rem 0;
+                    }
+
+                    #w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d {
+                        gap: 1.5rem;
+                    }
+
+                    .title-dr {
+                        padding: 5px;
+                        font-size: 24px;
+                    }
+
+                </style>
             </section>
 
 
