--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@
                                             </div>
                                         </div>
                                         <div class="additional-info">
-                                            <p><span class="conferencista-titulo">Conferencista: </span>Conferencista: Dr. Leonardo Vogel</p>
+                                            <p><span class="conferencista-titulo">Conferencista: </span> Dr. Leonardo Vogel</p>
                                             <p>La comunicación con tu laboratorio es la base de las restauraciones
                                                 biomimeticas, aprender a transmitir la mayor información a tu
                                                 laboratorio te dará el éxito en tu consulta diaria.</p>
@@ -1009,7 +1009,7 @@
                                             </div>
                                         </div>
                                         <div class="additional-info">
-                                            <p><span class="conferencista-titulo">Conferencista: </span>Conferencista: Dr. Fermin Ocañas</p>
+                                            <p><span class="conferencista-titulo">Conferencista: </span>Dr. Fermin Ocañas</p>
                                         </div>
                                     </div>
                                     <div data-w-id="092b5cf7-288f-355b-4821-e2dbff1fb15c" class="agenda-item">
@@ -1036,7 +1036,7 @@
                                             </div>
                                         </div>
                                         <div class="additional-info">
-                                            <p><span class="conferencista-titulo">Conferencista: </span>Conferencista: Dr. Cristian Reyna</p>
+                                            <p><span class="conferencista-titulo">Conferencista: </span> Dr. Cristian Reyna</p>
                                             <p>Los valores agregados en tu consulta aumentan la fidelidad de tus
                                                 pacientes y mejoran tus ingresos, aprende del mejor acerca de estos
                                                 temas.</p>
@@ -1065,7 +1065,7 @@
                                             <h3>Integración del Flujo Digital a tu Consulta Diaria</h3>
                                         </div>
                                         <div class="additional-info">
-                                            <p><span class="conferencista-titulo">Conferencista: </span>Conferencista: Dr. Oscar Vizcarra</p>
+                                            <p><span class="conferencista-titulo">Conferencista: </span> Dr. Oscar Vizcarra</p>
                                             <p>Conocerás las herramientas necesarias del flujo digital y la integración
                                                 del mismo en la odontología del día a día, ayudándote a seleccionar
                                                 aquellas herramientas que te serán de mejor provecho y con una baja
