Cambio en itinerario nestor

--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,7 @@
                                             <h3>Transición de Flujo Analógico a Flujo Digital. Curva de Aprendizaje</h3>
                                         </div>
                                         <div class="additional-info">
-                                            <p class="conferencista-titulo">Conferencista: Dr. Nestor Schejtman</p>
+                                            <p><span class="conferencista-titulo">Conferencista: </span>Dr. Nestor Schejtman</p>
                                             <p>Aprenderás cómo las herramientas digitales han enriquecido los protocolos
                                                 analógicos y cómo puedes hacer uso de los procesos CAD/CAM para mejorar
                                                 tu consulta diaria.</p>
