Cambio en el modal

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                             <form id="payment-form">
                                 <div class="ticket-selection">
                                   <label class="ticket-option">
-                                    <input type="radio" name="ticket-type" value="general" />
+                                    <input type="radio" name="ticket-type" value="general" checked />
                                     <div class="ticket-content">
                                       <span class="ticket-text">General</span>
                                       <span class="ticket-price">2000 MXN</span>
@@ -405,7 +405,7 @@
                                   <span id="button-text">Confirmar Pago</span>
                                 </button>
                                 <div id="payment-message" class="hidden"></div>
-                              </form>                                                          
+                              </form>                                                                                    
                         </div>
                     </div>
                 </div>
