--- a/index.html
+++ b/index.html
@@ -1358,6 +1358,8 @@
 .organizadoresImg2 {
     position: relative;
     text-align: center;
+    width: 100%;
+    height: 100%;
 }
 
 .organizadoresImg2 img {
@@ -1606,37 +1608,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section-home-cta">
-                <div class="padding-global">
-                    <div class="container-large">
-                        <div class="padding-section-large">
-                            <div class="w-layout-grid home-cta-component">
-                                <div class="home-cta-item">
-                                    <div class="max-width-large">
-                                        <div class="margin-bottom margin-small">
-                                            <h2>¡No te pierdas esta increíble oportunidad! Ven a este evento y aprovecha
-                                                al máximo.</h2>
-                                        </div>
-                                        <p class="text-size-medium">Sumérgete en una experiencia asombrosa y moderna que
-                                            cambiará tu perspectiva. Unete y se parte de nuestro evento y descubre
-                                            oportunidades increíbles que no querrás dejar pasar.</p>
-                                    </div>
-                                    <div class="margin-top margin-medium">
-                                        <a href="#tickets" class="button is-secondary w-button btn-abrir-popup">COMPRAR
-                                            ENTRADA</a>
-                                    </div>
-                                    <div class="home-cta-background-wrapper">
-                                        <div class="home-cta-overlay"></div>
-                                        <img src="assets/conferencia.jpg" loading="lazy" alt="Cta Image"
-                                            sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, (max-width: 1439px) 94vw, 1280px"
-                                            class="home-cta-background-image" />
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
+            
         </main>
         <footer class="footer-component">
             <div class="padding-global">
