--- a/index.html
+++ b/index.html
@@ -467,9 +467,9 @@
                     <div class="container-large">
                         <div class="">
                             <div class="margin-bottom margin-large mt-5">
-                                <div data-w-id="7790c7f5-e606-0e16-7ece-290f34840e41" class="max-width-large">
+                                <div data-w-id="7790c7f5-e606-0e16-7ece-290f34840e41">
                                     <div class="margin-bottom margin-small">
-                                        <h2 class="text-center text-md-start">Nuestros Conferencistas</h2>
+                                        <h2 class="text-center">Nuestros Conferencistas</h2>
                                     </div>
                                     <p class="text-size-medium text-center">Descubre la excelencia en conocimiento y
                                         experiencia que
