cambios en animacion y footer

--- a/index.html
+++ b/index.html
@@ -1425,7 +1425,7 @@
     </div>
     </section>
 
-    <section class="section-home-partner">
+    <section class="section-home-partner" id="section-home-partner">
         <div class="padding-global">
             <div class="container-large">
                 <div class="padding-section-medium">
@@ -1619,9 +1619,9 @@
     </main>
     <footer class="footer-component">
         <div class="padding-global">
-            <div class="container-large">
-                <div class="padding-section-medium">
-                    <div class="padding-bottom padding-xlarge">
+            <div class="container-large section-grid">
+                <div class="padding-section-medium section01">
+                    <div class="padding-xlarge">
                         <div class="footer-top-wrapper">
                             <div class="logo-footer">
                                 <a href="" aria-current="page" class="navbar-logo-link w-nav-brand w--current">
@@ -1629,28 +1629,7 @@
                                 </a>
                             </div>
 
-                            <div class="w-layout-grid footer-link-list">
-                                <nav id="nav-up" class="nav-footer">
-                                    <a href="#conferencistas" class="navbar-link w-nav-link">Conferencistas</a>
-                                    <a href="#agenda" class="navbar-link w-nav-link">Itinerario</a>
-                                    <a href="#location" class="navbar-link w-nav-link">Información</a>
-                                    <a href="#faq" class="navbar-link w-nav-link">FAQs</a>
 
-                                </nav>
-                                <!-- </div>
-                                <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
-                                    class="w-layout-grid footer-social-list">
-                                    <a href="https://www.facebook.com/dentalidcuu/"
-                                        class="footer-social-link w-inline-block" target="_blank">
-                                        <img src="./assets/facebook.png" loading="lazy" alt="Facebook Icon"
-                                            class="icon-1x1-small" />
-                                    </a>
-                                    <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
-                                        class="footer-social-link w-inline-block" target="_blank">
-                                        <img src="./assets/instagram.png" loading="lazy" alt="Instagram Icon"
-                                            class="icon-1x1-small" />
-                                    </a> -->
-                            </div>
                         </div>
                     </div>
                     <div class="footer-bottom-wrapper2">
@@ -1667,12 +1646,8 @@
                             notificará a la mayor brevedad posible y se proporcionará información sobre las opciones
                             disponibles.
                         </div>
-                        <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8ca2-547d8c7d" class="footer-credit">Todos
-                            los derechos reservados</div>
-                        <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8ca4-547d8c7d" class="text-size-small">
-                            Diseñado por: <a href=""><img src="./assets/Transparent Logo.png" alt="Logo Vexa"
-                                    class="vexa-logo"></a>
-                        </div>
+
+
 
                         <style>
                             .important {
@@ -1723,6 +1698,39 @@
                             }
                         </style>
                     </div>
+                </div>
+
+                <div class="w-layout-grid footer-link-list align-items-center">
+                    <nav id="nav-up" class="nav-footer">
+                        <a href="#conferencistas" class="navbar-link w-nav-link">Conferencistas</a>
+                        <a href="#agenda" class="navbar-link w-nav-link">Itinerario</a>
+                        <a href="#location" class="navbar-link w-nav-link">Información</a>
+                        <a href="#section-home-partner" class="navbar-link w-nav-link">Organizadores</a>
+                        <a href="#faq" class="navbar-link w-nav-link">FAQs</a>
+
+                    </nav>
+                    <!-- </div>
+                    <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
+                        class="w-layout-grid footer-social-list">
+                        <a href="https://www.facebook.com/dentalidcuu/"
+                            class="footer-social-link w-inline-block" target="_blank">
+                            <img src="./assets/facebook.png" loading="lazy" alt="Facebook Icon"
+                                class="icon-1x1-small" />
+                        </a>
+                        <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
+                            class="footer-social-link w-inline-block" target="_blank">
+                            <img src="./assets/instagram.png" loading="lazy" alt="Instagram Icon"
+                                class="icon-1x1-small" />
+                        </a> -->
+                </div>
+            </div>
+
+            <div class="copywrite">
+                <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8ca2-547d8c7d" class="footer-credit">Todos
+                    los derechos reservados</div>
+                <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8ca4-547d8c7d" class="text-size-small">
+                    Diseñado por: <a href=""><img src="./assets/Transparent Logo.png" alt="Logo Vexa"
+                            class="vexa-logo"></a>
                 </div>
             </div>
         </div>
