--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
-    
+
     <link rel="stylesheet" href="./styles/styles2.css">
     <style>
         @media (min-width: 992px) {
@@ -177,19 +177,19 @@
                                             </div>
                                             <div class="margin-bottom margin-small my-5">
                                                 <h1 class="codec-titulo">CODEC</h1>
-                                                <h3 class="frase-codec"">Sunt ea sint esse Lorem eu ut commodo ad.</h3>
+                                                <h3 class="frase-codec">Sunt ea sint esse Lorem eu ut commodo ad.</h3>
                                             </div>
                                             <div class=" header-infos-wrapper justify-content-md-between mt-5">
-                                                    <div class="header-infos-item">
-                                                        <div>3 y 4 de Octubre 2024</div>
-                                                    </div>
-                                                    <div class="header-infos-item">
-                                                        <div class="text-uppercase">CENTRO DE EXPOSICIONES
-                                                            Y CONVENCIONES</div>
-                                                    </div>
-                                                    <div class="header-infos-item  no-border">
-                                                        <div>Chihuahua, México</div>
-                                                    </div>
+                                                <div class="header-infos-item">
+                                                    <div>3 y 4 de Octubre 2024</div>
+                                                </div>
+                                                <div class="header-infos-item">
+                                                    <div class="text-uppercase">CENTRO DE EXPOSICIONES
+                                                        Y CONVENCIONES</div>
+                                                </div>
+                                                <div class="header-infos-item  no-border">
+                                                    <div>Chihuahua, México</div>
+                                                </div>
 
                                             </div>
 
@@ -231,10 +231,11 @@
                                     <h2 class="heading-style-h3">Descubre cómo la odontología no solo transforma
                                         sonrisas.</h2>
                                     <div class="margin-top margin-small">
-                                        <p class="text-size-medium">En este evento único, exploraremos las últimas
-                                            tendencias, avances tecnológicos y enfoques innovadores en el cuidado
-                                            dental. Desde conferencias inspiradoras hasta demostraciones prácticas, te
-                                            sumergirás en un ambiente donde la sonrisa es la protagonista.</p>
+                                        <p class="text-size-medium">Es un evento dental, enfocado a dentistas generales,
+                                            técnicos dentales y especialistas que están interesados en capacitarse y
+                                            mejorar sus servicios y conocimiento. Contaremos con la presencia de
+                                            diversos ponentes altamente capacitados, este busca ser un evento
+                                            representativo del estado de chihuahua en el área dental.</p>
                                     </div>
                                     <div class="margin-top margin-medium">
                                         <div class="highlights-item-list">
@@ -269,7 +270,7 @@
 
                                 <div class="d-grid align-items-center justify-content-center">
 
-                                    <img class="img-fluid" src="assets/dentistas_photo.jpg" alt="img evento">
+                                    <img class="img-fluid" src="assets/dentalid~243.webp" alt="img evento">
 
                                 </div>
 
@@ -738,7 +739,7 @@
                                         <h2>Explora Nuestro Itinierario</h2>
                                     </div>
                                     <div class="agenda-background">
-                                        <img src="assets/itinerario.png" loading="lazy" alt="Agenda Image"
+                                        <img src="assets/dentalid~165.webp" loading="lazy" alt="Agenda Image"
                                             sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, (max-width: 1439px) 46vw, 624px"
                                             class="agenda-background-image" />
                                         <div class="agenda-background-overlay"></div>
@@ -1154,12 +1155,12 @@
                                         <img src="assets/1.-LOGO GAUX.png" alt="logo">
                                         <div class="redes-c">
                                             <div class="footer-social-list">
-                                                <a href="https://www.facebook.com/dentalidcuu/"
+                                                <a href="https://www.facebook.com/profile.php?id=100090832025591&ref=xav_ig_profile_web"
                                                     class="footer-social-link" target="_blank">
                                                     <img src="./assets/facebook.png" loading="lazy" alt="Facebook Icon"
                                                         class="icon-1x1-small" />
                                                 </a>
-                                                <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
+                                                <a href="https://www.instagram.com/gutierrezgaux"
                                                     class="footer-social-link" target="_blank">
                                                     <img src="./assets/instagram.png" loading="lazy"
                                                         alt="Instagram Icon" class="icon-1x1-small" />
@@ -1190,8 +1191,7 @@
                                                     <img src="./assets/instagram.png" loading="lazy"
                                                         alt="Instagram Icon" class="icon-1x1-small" />
                                                 </a>
-                                                <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la"
-                                                    class="footer-social-link" target="_blank">
+                                                <a href="#" class="footer-social-link" target="_blank">
                                                     <img src="./assets/linkedin.png" loading="lazy" alt="LinkedIn Icon"
                                                         class="icon-1x1-small" />
                                                 </a>
@@ -1205,17 +1205,17 @@
                                         <img src="assets/zeyco_logo.png" alt="logo">
                                         <div class="redes-c">
                                             <div class="footer-social-list">
-                                                <a href="https://www.facebook.com/dentalidcuu/"
-                                                    class="footer-social-link" target="_blank">
+                                                <a href="https://www.facebook.com/ZeycoMx/" class="footer-social-link"
+                                                    target="_blank">
                                                     <img src="./assets/facebook.png" loading="lazy" alt="Facebook Icon"
                                                         class="icon-1x1-small" />
                                                 </a>
-                                                <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
-                                                    class="footer-social-link" target="_blank">
+                                                <a href="https://www.instagram.com/zeycomx/" class="footer-social-link"
+                                                    target="_blank">
                                                     <img src="./assets/instagram.png" loading="lazy"
                                                         alt="Instagram Icon" class="icon-1x1-small" />
                                                 </a>
-                                                <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la"
+                                                <a href="https://www.linkedin.com/company/zeyco/"
                                                     class="footer-social-link" target="_blank">
                                                     <img src="./assets/linkedin.png" loading="lazy" alt="LinkedIn Icon"
                                                         class="icon-1x1-small" />
@@ -1287,7 +1287,29 @@
                     </div>
                 </div>
             </section>
-            <section id="faq" class="section-home-faq">
+
+            <section class="slider-img">
+                <div class="slider-container">
+                    <div class="background-image">
+
+                    </div>
+                    <div class="slider">
+                        <div class="slides">
+                            <div class="slide"><img loading="lazy" src="assets/dentalid~248.webp" alt="Image 3"></div>
+                            <div class="slide"><img loading="lazy" src="assets/dentalid~269.webp" alt="Image 4"></div>
+                            <div class="slide"><img loading="lazy" src="assets/dentalid~290.webp" alt="Image 5"></div>
+                            <div class="slide"><img loading="lazy" src="assets/dentalid~42.webp" alt="Image 6"></div>
+                            <div class="slide"><img loading="lazy" src="assets/dentalid~75.webp" alt="Image 7"></div>
+
+                        </div>
+                    </div>
+                    <button class="nav-button prev-button">❮</button>
+                    <button class="nav-button next-button">❯</button>
+                </div>
+            </section>
+
+
+            <section id="faq" class="section-home-faq mt-5">
                 <div>
                     <div class="container-small">
                         <div>
@@ -1545,7 +1567,7 @@
             </div>
             <div class="blurred-circle is-footer"></div>
         </footer>
-        </div>
+    </div>
     </div>
     <script src="scripts/simplyCountdown.js"></script>
     <script src="scripts/app.js"></script>
